--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^10.0",
-        "illuminate/http": "^10.0",
-        "illuminate/database": "^10.0",
-        "illuminate/routing": "^10.0"
+        "php": "^8.0.2",
+        "illuminate/support": "^9.0|^10.0",
+        "illuminate/http": "^9.0|^10.0",
+        "illuminate/database": "^9.0|^10.0",
+        "illuminate/routing": "^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^7.0|^8.0",
         "mockery/mockery": "^1.5",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^9.5|^10.0"
     },
     "autoload": {
         "psr-4": {
